Testing wild stuff

--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -8,8 +8,11 @@
   <form method="post">
     <label for="title">Title</label>
     <input name="title" id="title" value="{{ request.form['title'] }}" required>
-    <label for="body">Body</label>
+    <label for="body">Short description</label>
     <textarea name="body" id="body">{{ request.form['body'] }}</textarea>
+    <label for="body">Long description</label>
+    <textarea name="body" id="body">{{request.form['body2']}}</textarea>
     <input type="submit" value="Save">
   </form>
+  
 {% endblock %}
