--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -20,7 +20,7 @@
         {% endif %}
       </header>
       <p class="body">{{ post['body'] }}</p>
-      <p class="body">{{post['body2']}}</p>
+      <p class="body2">{{ post['body2'] }}</p>
     </article>
     {% if not loop.last %}
       <hr>
