--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -23,10 +23,9 @@
     margin-bottom: 0;
 }
 </style>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-<a class="navbar-brand" href="#">
-  <a class="navbar-brand" href="#">
-    <img src="../images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="../">
+    <img src="https://i.imgur.com/Aj2RX3o.png" width="30" height="30" class="d-inline-block align-top" alt="">
     KS.no
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,18 +50,18 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
+        </ul>
       </li>
       {% if g.user %}
-      <li class="nav-item">
         <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
-        <a class="nav-link disabled" href="#">{{ g.user['username'] }}</a>
-      </li>
       {% else %}
-      <li class="nav-item ">
         <a class="nav-link active" href="{{ url_for('auth.login') }}">Login</a> 
-      </li>
       {% endif %}
-    </ul>
+      <span class="navbar-text"
+        >{{ g.user['username'] }}
+      </span>
+        
+     
   </div>
 </nav>
 
@@ -83,6 +82,7 @@
 
 
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
