--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -53,13 +53,15 @@
         </ul>
       </li>
       {% if g.user %}
-        <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
-      {% else %}
-        <a class="nav-link active" href="{{ url_for('auth.login') }}">Login</a> 
-      {% endif %}
-      <span class="navbar-text"
+       <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
+       <span class="navbar-text"
         >{{ g.user['username'] }}
       </span>
+      {% else %}
+        <a class="nav-link active" href="{{ url_for('auth.login') }}">Login</a> 
+        <a class="nav-link active" href="{{ url_for('auth.register') }}">Register</a> 
+      {% endif %}
+      
         
      
   </div>
