--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Posts{% endblock %}</h1>
+  <h1>{% block title %}For Sale{% endblock %}</h1>
   {% if g.user %}
     <a class="action" href="{{ url_for('blog.create') }}">New</a>
   {% endif %}
@@ -27,3 +27,5 @@
     {% endif %}
   {% endfor %}
 {% endblock %}
+
+<!-- https://getbootstrap.com/docs/4.0/components/modal/ for post innhold, https://freefrontend.com/bootstrap-comments/ for comments -->
