--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Flaskr</title>
 
+
+
 <!-- https://getbootstrap.com/docs/4.0/components/navbar/#how-it-works  documentation for navbar-->
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 
 <style>
 .jumbotron{
@@ -12,18 +15,12 @@
 }
 .navbar-expand{-sm|-md|-lg|-xl}
 
-.tab-content {
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    padding: 10px;
-}
+.bg-secondary
 
-
-.nav-tabs {
-    margin-bottom: 0;
 }
 </style>
+
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="../">
     <img src="https://i.imgur.com/Aj2RX3o.png" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -39,7 +36,7 @@
         <a class="nav-link" href="../">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About us</a>
+        <a class="nav-link" href="{{ url_for('auth.about') }}">About us</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -75,7 +72,6 @@
   
     {% block header %}{% endblock %}
   
-
   </header>
   {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
