--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -12,12 +12,13 @@
 .jumbotron{
     background-color:#2E2D88;
     color:white;
-}
+} 
 .navbar-expand{-sm|-md|-lg|-xl}
 
-.bg-secondary
-
+.modal-body p {
+    word-wrap: break-word;
 }
+
 </style>
 
 
