--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -1,15 +1,30 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Log In{% endblock %}</h1>
+<h1>{% block title %}Log In{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-  <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
-  </form>
-{% endblock %}
+
+
+<form method="post">
+    <div class="mx-auto" style="width: 1400px;">
+        <div class="form-row mb-3">
+            <div class="col">
+                <label for="username">Username</label>
+                <input type="text" name="username" id="username" required class="form-control" placeholder="Username">
+            </div>
+            <div class="col">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" id="password" required placeholder="Password">
+            </div>
+        </div>
+        <div class="form-row mb3">
+            <button type="submit" value="Log In" class="btn btn-primary">Log In</button>
+        </div>
+    </div>
+</form>
+
+
+
+    {% endblock %}
