--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -48,36 +48,50 @@
 
 <div class="modal fade" id="{{ post['id'] }}" tabindex="-1" role="dialog" aria-labelledby="{{ post['id'] }}" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h3 class="modal-title" id="{{ post['id'] }}">{{ post['title'] }}</h3>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-      
-      
-      <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
-      
-      {% if g.user['id'] == post['author_id'] %}
-        <div class="mx-auto" style="width: 1600px;">
-          <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
-        </div>
-      {% endif %}
-      <hr>
-      <p class="body">{{ post['body'] }}</p>
+      <div class="modal-content">
+          <div class="modal-header">
+              <h3 class="modal-title" id="{{ post['id'] }}">{{ post['title'] }}</h3>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <div class="modal-body">
 
-      <p class="body2">{{ post['body2'] }}</p>
 
-      <b>Pris:</b><h5 class="pris">{{ post['pris'] }} kr</h5>
+              <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
 
+              {% if g.user['id'] == post['author_id'] %}
+              <div class="mx-auto" style="width: 1600px;">
+                  <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
+              </div>
+              {% endif %}
+              <hr>
+              <p class="body">{{ post['body'] }}</p>
+
+              <p class="body2">{{ post['body2'] }}</p>
+
+              <b>Pris:</b><h5 class="pris">{{ post['pris'] }} kr</h5>
+
+          </div>
+          <hr />
+
+          {% for comment in comments%}
+            {% if  post['id']  ==  comment['postid']  %}
+            <div class="about">by {{comment['username']}} on {{comment['cCreated'].strftime('%Y-%m-%d')}} </div>
+            <hr />
+            <p class="form-control">{{ comment['commenttext'] }}</p>
+            {% endif %}
+          {% endfor %}
+            <form method="post">
+                <textarea class="form-control" name="commentfield" rows="2" id="commentfield" placeholder="Insert Comment here, Remember to keep civil." maxlength="280">{{ request.form['commenttext']}}</textarea>
+
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="submit" class="btn btn-primary">Submit comment</button>
+                </div>
+            </form>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Submit comment</button>
-      </div>
-    </div>
   </div>
 </div>
     {% if not loop.last %}
@@ -87,4 +101,4 @@
 <hr />
 {% endblock %}
 
-<!-- https://getbootstrap.com/docs/4.0/components/modal/ for post innhold, https://freefrontend.com/bootstrap-comments/ for comments -->
+<!-- https://getbootstrap.com/docs/4.0/components/modal/ for post innhold, https://freefrontend.com/bootstrap-comments/ for comments, scratch that, gjorde comments by hand. -->
