Work in progress, now adding file upload

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -12,13 +12,12 @@
 .jumbotron{
     background-color:#2E2D88;
     color:white;
-} 
+}
 .navbar-expand{-sm|-md|-lg|-xl}
 
-.modal-body p {
-    word-wrap: break-word;
-}
+.bg-secondary
 
+}
 </style>
 
 
