--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -43,7 +43,7 @@
           Categories
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Profile</a>
+            <a class="dropdown-item" href="{{url_for('auth.profile')}}">Profile</a>
           <a class="dropdown-item" href="#"></a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Log out</a>
