--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -88,7 +88,11 @@
               <textarea class="form-control" name="commenttext" rows="2" id="commenttext" placeholder="Insert Comment here, Remember to keep civil." maxlength="280"></textarea>
               <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  {% if g.user %}
                   <button type="submit" class="btn btn-primary" value="save">Submit comment</button>
+                  {% else %}
+                  <button type="submit" class="btn btn-primary" data-toggle="tooltip" data-placement="top" title="You have to be logged in to post a comment" disabled>Submit comment</button>
+                  {% endif %}
               </div>
               <input type="hidden" id="ctid" name="ctid" value="{{post['id']}}">
           </form>
