--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -23,7 +23,7 @@
         <div class="form-row mb-3">
             <div class="col">
                 <label for="email">E-Mail</label>
-                <input type="text" class="form-control" name="email" id="email" placeholder="Email">
+                <input type="text" class="form-control" name="email" id="email" required placeholder="Email">
             </div>
         </div>
         <div class="form-row mb-3">
