--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -104,7 +104,9 @@
       <hr>
     {%  endif %}
   {% endfor %}
+  <div class="mx-auto" style="width: 1600px;">
 <hr />
+  </div>
 {% endblock %}
 
 <!-- https://getbootstrap.com/docs/4.0/components/modal/ for post innhold, https://freefrontend.com/bootstrap-comments/ for comments, scratch that, gjorde comments by hand. -->
