--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -43,17 +43,26 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Categories
+                    User
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    {% if g.user %}
                     <a class="dropdown-item" href="{{url_for('auth.profile')}}">Profile</a>
+                    {% else %}
+                    <a class="dropdown-item disabled" href="{{url_for('auth.profile')}}">Profile</a>
+                    {% endif %}
                     <a class="dropdown-item" href="#"></a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Log out</a>
+                    {% if g.user %}
+                    <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Log out</a>
+                    {% else %}
+                    <a class="dropdown-item" href="{{ url_for('auth.login') }}">Log In</a>
+                    {% endif %}
                 </div>
         </ul>
         </li>
         {% if g.user %}
+
         <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout</a>
         <span class="navbar-text">
             {{ g.user['username'] }}
