--- a/flaskr/templates/blog/update.html
+++ b/flaskr/templates/blog/update.html
@@ -8,7 +8,7 @@
 
 
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     <div class="mx-auto" style="width: 1600px;">
         <div class="row mb-3">
             <label for="title" class="col-sm-2 col-form-label col-form-label-lg">Post Title</label>
@@ -39,7 +39,7 @@
             <div class="col-sm-1">
                 <b>Upload picture</b>
             </div>
-            <div><input class="form-control" type="file" id="formFile"></div>
+            <div><input class="form-control" type="file" name  ='file' id="file"></div>
         </div>
 
         <div class="row">
