--- a/flaskr/templates/auth/about.html
+++ b/flaskr/templates/auth/about.html
@@ -9,7 +9,7 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Who made this? (placeholder text btw)</h1>
-    <h3 class="display-4"><img src="https://i.imgur.com/Aj2RX3o.png" width="200" height="200" class="d-inline-block align-mid">
+    <h3 class="display-4"><img src="/static/images/logo.png" width="200" height="200" class="d-inline-block align-mid">
 
     <p class="lead">This site was made by 3 norwegian students bringing forth their vision for a faster way meet up and sell things.</p>
     <p class="lead">
