--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -20,14 +20,17 @@
 
     .bg-secondary {
     }
+    .img {
+        max-width: 700px;
+    }
 </style>
 
 
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="../">
-        <img src="https://i.imgur.com/Aj2RX3o.png" width="30" height="30" class="d-inline-block align-top" alt="">
-        KS.no
+        <img src="/static/images/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+        KjøpStuff.no
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
