--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -23,7 +23,7 @@
           <h1>{{ post['title'] }}</h1>
           <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
         </div>
-        {% if g.user['id'] == post['author_id'] %}
+        {% if g.user['id'] == post['author_id']  %}
         <div class="mx-auto" style="width: 1600px;">
           <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
         </div>
@@ -67,6 +67,20 @@
               <p class="body2">{{ post['body2'] }}</p>
 
               <b>Pris:</b><h5 class="pris">{{ post['pris'] }} kr</h5>
+
+              
+              <img class="img" src="/static/images/{{post.file}}">
+             
+              
+              
+
+              
+              
+              
+
+
+
+              
 
           </div>
           <hr />
