--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -38,6 +38,12 @@
             </div>
             <div><input class="form-control" type="file" name  ='file' id="file"></div>
         </div>
+        <div class=" form-row mb-3">
+            <form method="KPOP"> <!-- Sends POST request to flask server -->
+                {{ recaptcha }} <!-- Refer to 'recaptcha' variable in main.py -->
+            </form>
+            <p>{{ message }}</p>
+        </div>
 
         <div class="row">
             <input type="submit" value="Save">
