--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -23,7 +23,7 @@
           <h1>{{ post['title'] }}</h1>
           <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
         </div>
-        {% if g.user['id'] == post['author_id']  %}
+        {% if g.user['id'] == post['author_id']  or g.user['id']==1 %}
         <div class="mx-auto" style="width: 1600px;">
           <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
         </div>
