--- a/flaskr/templates/auth/about.html
+++ b/flaskr/templates/auth/about.html
@@ -28,5 +28,24 @@
 
   <h2 class="display-4">Copyrighted &trade; btws &copy;</h>
   </div>
+  <div class="row mb-3"></div>
+        
 </div>
+<div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        
+        
+        
 {% endblock %}
