--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -29,6 +29,59 @@
             <button type="submit" value="Log In" class="btn btn-primary">Log In</button>
         </div>
     </div>
+    <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        
+        
+        
 </form>
 
 
