--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -23,6 +23,21 @@
     .img {
         width: 750px;
     }
+    .post{
+        background-color: rgb(66, 66, 66);
+        color: white;
+    }
+    .content{
+        background-color: rgb(66, 66, 66);
+        color: white;
+    }
+    .bottom{
+        background-color: rgb(66, 66, 66);
+        color: white;
+    }
+    .modal-content{
+        background-color: rgb(66, 66, 66);
+    }
 </style>
 
 
