--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -113,6 +113,7 @@
 
       </div>
   </div>
+<endit class="bottom">
 </div>
     {% if not loop.last %}
       <hr>
@@ -121,6 +122,9 @@
   <div class="mx-auto" style="width: 1600px;">
 <hr />
   </div>
+</endit>
+
+
 {% endblock %}
 
 <!-- https://getbootstrap.com/docs/4.0/components/modal/ for post innhold, https://freefrontend.com/bootstrap-comments/ for comments, scratch that, gjorde comments by hand. -->
