--- a/flaskr/templates/auth/profile.html
+++ b/flaskr/templates/auth/profile.html
@@ -10,6 +10,10 @@
 {% if g.user %}
 
 <div class="jumbotron jumbotron-fluid">
+  <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
   <div class="container">
     <h1 class="display-4">Username:   {{ g.user['username'] }}</h1>
     <p class="lead">mail:{{ g.user['email']}} </p>
@@ -29,7 +33,39 @@
 
   <h2 class="display-4">Copyrighted &trade; btws &copy;</h>
   </div>
+  <div class="row mb-3"></div>
+  <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        
+        
 </div>
+
+<div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        
+        
+        
+        
+        
 
 
 
