--- a/flaskr/templates/blog/create.html
+++ b/flaskr/templates/blog/create.html
@@ -48,6 +48,43 @@
         <div class="row">
             <input type="submit" value="Save">
         </div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
     </div>
+
 </form>
 {% endblock %}
