--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -13,6 +13,10 @@
         background-color: #2E2D88;
         color: white;
     }
+    .mx-auto{
+        text-align: left;
+    }
+
 
     .navbar-expand {
         -sm |-md|-lg|-xl
@@ -37,6 +41,21 @@
     }
     .modal-content{
         background-color: rgb(66, 66, 66);
+    }
+    .action{
+        background-color: rgb(66, 66, 66);
+        color: rgb(26, 187, 250);
+        font-size: 17px;
+    }
+    .action2{
+        background-color: rgb(66, 66, 66);
+        color: rgb(26, 187, 250);
+        font-size: 17px;
+        
+    }
+    .img2{
+        height: 250px;
+        width: 250px;
     }
 </style>
 
