--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -2,11 +2,15 @@
 
 {% block header %}
   <div class="mx-auto" style="width: 1800px;">
+    <div class="row mb-3"></div>
+    
+  
 <h1>{% block title %}For Sale{% endblock %}</h1>
   {% if g.user %}
   
-    <a class="action" href="{{ url_for('blog.create') }}">New</a>
-  </div>
+    <button type="button" class="action" href="{{ url_for('blog.create') }}">Create post </button>
+    <div class="row mb-3"></div>
+    
   {% endif %}
 {% endblock %}
 
@@ -17,31 +21,41 @@
 
 
   {% for post in posts %}
-    <article class="post">
-      <header>
-        <div class="mx-auto" style="width: 1600px;">
-          <h1>{{ post['title'] }}</h1>
-          <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
-        </div>
-        {% if g.user['id'] == post['author_id']  or g.user['id']==1 %}
-        <div class="mx-auto" style="width: 1600px;">
-          <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
-        </div>
-        {% endif %}
-      </header>
-      <div class="mx-auto" style="width: 1600px;">
-      <p class="body">{{ post['body'] }}</p>
-       <hr>
-       <b>Pris:</b><h5 class="pris">{{ post['pris'] }} kr</h5>
+  <div class="d-flex flex-nowrap">
+    <div class="order-3 p-2"></div>
+    <div class="order-3 p-2">
+      <article class="post">
+        
+        <header>
+          <div class="mx-auto" style="width: 1000px;">
+            <h1>{{ post['title'] }}</h1>
+            <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
+          </div>
+          {% if g.user['id'] == post['author_id']  or g.user['id']==1 %}
+          <div class="mx-auto" style="width: 1000px;">
+            <button type="button" class="action2" href="{{ url_for('blog.update', id=post['id']) }}">Edit</button>
+          </div>
+          {% endif %}
+        </header>
+        <div class="mx-auto" style="width: 1000px;">
+        <p class="body">{{ post['body'] }}</p>
+        <hr>
+        <b>Price:</b><h5 class="pris">{{ post['pris'] }} kr</h5>
 
+        </div>
+      </article>
+      <div class="mx-auto" style="width: 1000px;">
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#{{ post['id'] }}">
+        See More
+      </button>
       </div>
-    </article>
-    <div class="mx-auto" style="width: 1600px;">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#{{ post['id'] }}">
-      Read More
-    </button>
     </div>
-
+    <div class="order-2 p-2">
+      <img class="img2" src="/static/images/{{post.file}}">
+    </div>
+    <div class="order-1 p-2"></div>
+    <div class="order-1 p-2"></div>
+  </div>
 <div class="modal fade" id="{{ post['id'] }}" tabindex="-1" role="dialog" aria-labelledby="{{ post['id'] }}" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
@@ -66,7 +80,7 @@
 
               <p class="body2">{{ post['body2'] }}</p>
 
-              <b>Pris:</b><h5 class="pris">{{ post['pris'] }} kr</h5>
+              <b>Price:</b><h5 class="pris">{{ post['pris'] }} kr</h5>
 
               
               <img class="img" src="/static/images/{{post.file}}">
