--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -8,7 +8,7 @@
 <h1>{% block title %}For Sale{% endblock %}</h1>
   {% if g.user %}
   
-    <button type="button" class="action" href="{{ url_for('blog.create') }}">Create post </button>
+    <a class="action" href="{{ url_for('blog.create') }}">Create post </a>
     <div class="row mb-3"></div>
     
   {% endif %}
@@ -27,24 +27,24 @@
       <article class="post">
         
         <header>
-          <div class="mx-auto" style="width: 1000px;">
+          <div class="mx-auto" style="width: 200px;">
             <h1>{{ post['title'] }}</h1>
             <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
           </div>
           {% if g.user['id'] == post['author_id']  or g.user['id']==1 %}
-          <div class="mx-auto" style="width: 1000px;">
-            <button type="button" class="action2" href="{{ url_for('blog.update', id=post['id']) }}">Edit</button>
+          <div class="mx-auto" style="width: 200px;">
+            <a class="action2" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
           </div>
           {% endif %}
         </header>
-        <div class="mx-auto" style="width: 1000px;">
+        <div class="mx-auto" style="width: 200px;">
         <p class="body">{{ post['body'] }}</p>
         <hr>
         <b>Price:</b><h5 class="pris">{{ post['pris'] }} kr</h5>
 
         </div>
       </article>
-      <div class="mx-auto" style="width: 1000px;">
+      <div class="mx-auto" style="width: 200px;">
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#{{ post['id'] }}">
         See More
       </button>
@@ -55,6 +55,12 @@
     </div>
     <div class="order-1 p-2"></div>
     <div class="order-1 p-2"></div>
+    <div class="order-1 p-2"></div>
+    <div class="order-1 p-2"></div>
+    <div class="order-1 p-2"></div>
+    <div class="order-1 p-2"></div>
+    
+
   </div>
 <div class="modal fade" id="{{ post['id'] }}" tabindex="-1" role="dialog" aria-labelledby="{{ post['id'] }}" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
