--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -57,6 +57,10 @@
         height: 250px;
         width: 250px;
     }
+    .form-control{
+        background-color: rgb(69, 69, 69);
+        color: whitesmoke;
+    }
 </style>
 
 
