--- a/flaskr/templates/auth/about.html
+++ b/flaskr/templates/auth/about.html
@@ -8,10 +8,14 @@
 {% block content %}
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Who made this? (placeholder text btw)</h1>
-    <h3 class="display-4"><img src="/static/images/logo.png" width="200" height="200" class="d-inline-block align-mid">
+    <h1 class="display-4">Who made this? </h1>
+    <div class="row mb-3"></div>
+    <h3 class="display-4"><img src="/static/images/logo.png" width="300" height="300" class="d-inline-block align-mid">
+      <div class="row mb-3"></div>
+      <div class="row mb-3"></div>
 
     <p class="lead">This site was made by 3 norwegian students bringing forth their vision for a faster way meet up and sell things.</p>
+    <p class="lead">To those who try to break in, good luck.</p>
     <p class="lead">
     <img src="https://cdn.discordapp.com/emojis/771446570553704509.png?size=96" width="60" height="60" class="d-inline-block align-mid" alt="">
     Sander
@@ -26,7 +30,7 @@
   </p>
 
 
-  <h2 class="display-4">Copyrighted &trade; btws &copy;</h>
+  <h2 class="display-4">Copyrighted &trade; btws &copy; (maybye)</h>
   </div>
   <div class="row mb-3"></div>
         
