--- a/flaskr/templates/auth/profile.html
+++ b/flaskr/templates/auth/profile.html
@@ -9,32 +9,49 @@
 
 {% if g.user %}
 
+
+
+
 <div class="jumbotron jumbotron-fluid">
   <div class="row mb-3"></div>
         <div class="row mb-3"></div>
         <div class="row mb-3"></div>
         <div class="row mb-3"></div>
   <div class="container">
-    <h1 class="display-4">Username:   {{ g.user['username'] }}</h1>
-    <p class="lead">mail:{{ g.user['email']}} </p>
-    <p class="lead">
-    <img src="https://cdn.discordapp.com/emojis/771446570553704509.png?size=96" width="60" height="60" class="d-inline-block align-mid" alt="">
-    Sander
-  </p>
-  <p class="lead">
-    <img src="https://cdn.discordapp.com/emojis/689497035161862229.png?size=96" width="60" height="60" class="d-inline-block align-mid" alt="">
-    Lars
-  </p>
-  <p class="lead">
-    <img src="https://cdn.discordapp.com/emojis/692463488429326457.png?size=96" width="60" height="60" class="d-inline-block align-mid" alt="">
-    Runar
-  </p>
-
-
-  <h2 class="display-4">Copyrighted &trade; btws &copy;</h>
+    <h1 class="display-4">User info about: {{ g.user['username'] }}</h1>
+    <p class="lead"></p>
+    {% for email in email %}
+      <p class="lead">Username: {{ g.user['username']}}</p>
+      <div class="lead" id="{{ email['uid'] }}">Email: {{email['mail']}} </div>
+      
+      <p class="lead">
+    {% endfor %}
+      <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+      <h3 class="display-4"><img src="/static/images/logo.png" width="250" height="250" class="d-inline-block align-mid">
+   
   </div>
   <div class="row mb-3"></div>
   <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
+        <div class="row mb-3"></div>
         <div class="row mb-3"></div>
         <div class="row mb-3"></div>
         <div class="row mb-3"></div>
@@ -69,12 +86,14 @@
 
 
 
-{% else %}
 
+
+        {% else %}
 
 
 
 {% endif %}
+
 
 
 
