--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -53,6 +53,9 @@
         font-size: 17px;
         
     }
+    .haha{
+        size: 100px;
+    }
     .img2{
         height: 250px;
         width: 250px;
