Comment section fix

--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -103,7 +103,7 @@
               
               <hr />
               <h6 class="form-control">{{ comment['commenttext'] }}</h6>
-              <div class="about">by {{comment['username']}} on {{comment['cCreated'].strftime('%Y-%m-%d')}} </div>
+              <div class="about">by {{comment['username']}} on {{comment['ccreated'].strftime('%Y-%m-%d')}} </div>
 
               {% endif %}
 
